; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_booke_wdt.c___booke_wdt_enable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_booke_wdt.c___booke_wdt_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SPRN_TCR = common dso_local global i32 0, align 4
@WDTP_MASK = common dso_local global i32 0, align 4
@TCR_WIE = common dso_local global i32 0, align 4
@WRC_CHIP = common dso_local global i32 0, align 4
@booke_wdt_period = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @__booke_wdt_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__booke_wdt_enable(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = call i32 @__booke_wdt_ping(i32* null)
  %5 = load i32, i32* @SPRN_TCR, align 4
  %6 = call i32 @mfspr(i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @WDTP_MASK, align 4
  %8 = xor i32 %7, -1
  %9 = load i32, i32* %3, align 4
  %10 = and i32 %9, %8
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* @TCR_WIE, align 4
  %12 = load i32, i32* @WRC_CHIP, align 4
  %13 = call i32 @TCR_WRC(i32 %12)
  %14 = or i32 %11, %13
  %15 = load i32, i32* @booke_wdt_period, align 4
  %16 = call i32 @WDTP(i32 %15)
  %17 = or i32 %14, %16
  %18 = load i32, i32* %3, align 4
  %19 = or i32 %18, %17
  store i32 %19, i32* %3, align 4
  %20 = load i32, i32* @SPRN_TCR, align 4
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @mtspr(i32 %20, i32 %21)
  ret void
}

declare dso_local i32 @__booke_wdt_ping(i32*) #1

declare dso_local i32 @mfspr(i32) #1

declare dso_local i32 @TCR_WRC(i32) #1

declare dso_local i32 @WDTP(i32) #1

declare dso_local i32 @mtspr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
